--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 * {
+  /* The "*" symbol affects ALL HTML elements*/
   margin: 0;
   padding: 0;
+  /*border-box value in box-sizing property calculates height and width by 
+  by including border and padding additions to content box*/
+  box-sizing: border-box;
 }
 body {
   font-family: Helvetica, Arial, sans-serif;
@@ -17,6 +21,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  /*The inline display creates inline element properties for a block element*/
   display: inline;
 }
 header a {
@@ -32,4 +37,23 @@ header nav ul li {
   margin: 0;
   font-weight: lighter;
   font-size: 22px;
+}
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
+footer a {
+  color: #024e76;
 }
