--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,3 +108,24 @@ h3 {
   font-size: 16px;
 }
 /* End of Style Form and Input Fields*/
+
+/* What we do introduction section*/
+.intro {
+  text-align: center;
+}
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0px 100px 20px 100px;
+  border-bottom: 3px solid #fce138;
+  display: inline-block;
+}
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20 px;
+  /* To center an block element with width < 100% use margin: 0 auto; */
+  margin: 0 auto;
+}
