--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,3 +238,29 @@ h3 {
   font-size: 17px;
   line-height: 1.3;
 }
+
+/* contact section*/
+
+.contact-section {
+  background: #024e76;
+  text-align: center;
+}
+
+.contact-section h2 {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+.contact-info div {
+  display: inline-block;
+  width: 400px;
+  text-align: left;
+  margin: 30px 0px 0px 60px;
+  vertical-align: top;
+  color: white;
+}
+
