--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,3 +264,19 @@ h3 {
   color: white;
 }
 
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+/*Don't forget the comma between class specifications ;) */
+.contact-info p, .contact-info address {
+  margin: 20px 0px;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
