--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,10 @@ header nav ul li a{
   font-size: 22px;
 }
 
+/* End of Header */
+
+/* Footer */
+
 footer {
   background: #fce138;
   width: 100%;
@@ -70,6 +74,8 @@ footer div {
 footer a {
   color: #024e76;
 }
+
+/* End of Footer*/
 
 section {
   padding: 60px;
@@ -171,6 +177,7 @@ h3 {
 .steps span {
   font-size: 38px;
 }
+/* End of What You Do Section */
 
 /* blending css for section titles and heading borders*/
 .section-title {
@@ -238,6 +245,7 @@ h3 {
   font-size: 17px;
   line-height: 1.3;
 }
+/* End of Trainer*/
 
 /* contact section*/
 
