--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,14 +42,20 @@ header nav {
   margin: 7px 0;
 }
 
-header nav ul li {
-  display: inline;
+/*removed header nav ul li display: inline; for flexbox*/
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
 header nav ul li a{
   margin: 0 30px;
   font-weight: lighter;
-  font-size: 22px;
+  font-size: 1.55vw;
+  /*changed font-size:20px; to 1.55vw or "viewport width" for flexbox*/
 }
 
 /* End of Header */
