--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,17 +66,22 @@ footer {
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  /*flexbox*/
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer h2 {
-  display: inline;
+  /* removed display: inline; for flexbox */
+
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
+  /*float: right; removed for flexbox*/
   line-height: 1.5;
   text-align: right;
 }
@@ -94,10 +99,28 @@ section {
 /*Hero Style Start*/
 .hero {
   background-image: url("../images/hero-bg.jpg");
-  height: 600px;
+  /*removed  background-position: center; and height: 600px; for flexbox*/
   background-size: cover;
-  background-position: center;
   position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* hero call to action*/
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 /*Hero Style Ends*/
 
@@ -106,11 +129,10 @@ section {
   color: #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 600px;
   border: solid 3px #024e76;
-  position: absolute;
-  bottom: 80px;
-  right: 80px;
+ /* width: 600px; position: absolute; bottom: 80px; right: 80px; removed for flexbox*/
+ width: 40%;
+ margin: 3.5%;
 }
 
 h3 {
