--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,8 @@ body {
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
-  /*after removal of display:inline; in header h1 and float:right; in header nav, display:flex; creates mobile responsiveness*/
+  /*after removal of display:inline; in header h1 and float:right; 
+  in header nav, display:flex; creates mobile responsiveness*/
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -55,7 +56,8 @@ header nav ul li a{
   margin: 0 30px;
   font-weight: lighter;
   font-size: 1.55vw;
-  /*changed font-size:20px; to 1.55vw or "viewport width" for flexbox*/
+  /*changed font-size:20px; 
+  to 1.55vw or "viewport width" for flexbox*/
 }
 
 /* End of Header */
@@ -99,7 +101,8 @@ section {
 /*Hero Style Start*/
 .hero {
   background-image: url("../images/hero-bg.jpg");
-  /*removed  background-position: center; and height: 600px; for flexbox*/
+  /*removed  background-position: center; 
+  and height: 600px; for flexbox*/
   background-size: cover;
   position: relative;
   display: flex;
@@ -130,7 +133,9 @@ section {
   background-color: #fce138;
   padding: 20px;
   border: solid 3px #024e76;
- /* width: 600px; position: absolute; bottom: 80px; right: 80px; removed for flexbox*/
+ /* width: 600px; position: absolute; 
+ bottom: 80px; right: 80px; 
+ removed for flexbox*/
  width: 40%;
  margin: 3.5%;
 }
@@ -176,38 +181,69 @@ h3 {
   color: #39a6b2;
   width: 80%;
   font-size: 20 px;
-  /* To center an block element with width < 100% use margin: 0 auto; */
+  /* To center an block element 
+  with width < 100% use margin: 0 auto; */
   margin: 0 auto;
   text-align: center;
 }
 /* End of What we do */
 
-/* What You Do Section */
+/* What You Do Section 
+Removed Steps img div and span  for flexbox &
+steps h3 -> step h3 removed margin-top
+steps p -> step-text p change font-size */
 .steps {
   background: #fce138;
 }
 
-.steps div {
-  margin-bottom: 80px;
-}
-.steps img {
-  width: 15%;
-  margin: 10px 0;
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.steps h3 {
+.step h3 {
   color: #024e76;
   font-size: 46px;
-  margin-top: 10px;
+  flex: 1 30%;
+ }
+
+ .step-info {
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   flex: 2 70%;
+ }
+
+ .step-text {
+   flex: 12;
+ }
+
+ .step-text h4 {
+   font-size: 26px;
+   line-height: 1.5;
+   color: #024e76;
+ }
+
+.step-text p {
+  color: #39a6b2;
+  font-size: 18px;
 }
 
-.steps p {
-  color: #39a6b2;
-  font-size: 23px;
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
 }
-.steps span {
-  font-size: 38px;
+
+.step-img img {
+  max-width: 100%;
 }
+
 /* End of What You Do Section */
 
 /* blending css for section titles and heading borders*/
@@ -215,10 +251,11 @@ h3 {
   font-size: 55px;
   color: #024e76;
   border-bottom: 3px solid;
-  /*  margin-bottom: 35px; padding: 0 100px 20px 100px; display: inline-block; removed, flexbox*/
+  /*  margin-bottom: 35px; padding: 0 100px 20px 100px; 
+  display: inline-block; removed, flexbox*/
   padding: 20px;
   text-align: center;
-  margin: 0 auto 35px 0;
+  margin: 0 auto 35px;
   width: 50%;
 }
 
