--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,6 +311,16 @@ removed margin-bottom for flexbox*/
 /* End of Trainer*/
 
 /* contact section*/
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
 
 .contact-section {
   background: #024e76;
@@ -321,16 +331,10 @@ removed margin-bottom for flexbox*/
 }
 
 .contact-info iframe {
-  width: 400px;
   height: 400px;
 }
 
 .contact-info div {
-  display: inline-block;
-  width: 400px;
-  text-align: left;
-  margin: 30px 0px 0px 60px;
-  vertical-align: top;
   color: white;
 }
 
@@ -343,12 +347,33 @@ removed margin-bottom for flexbox*/
 .contact-info p, .contact-info address {
   margin: 20px 0px;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
 }
 
 .contact-info a {
   color: #fce138;
+}
+
+.contact-form input, .contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
 }
 
 .flex-row {
