--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ header nav ul {
 }
 
 header nav ul li a{
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
   /*changed font-size:20px; 
@@ -108,6 +108,7 @@ section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 /* hero call to action*/
@@ -117,7 +118,7 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -248,7 +249,7 @@ steps p -> step-text p change font-size */
 
 /* blending css for section titles and heading borders*/
 .section-title {
-  font-size: 55px;
+  font-size: 48px;
   color: #024e76;
   border-bottom: 3px solid;
   /*  margin-bottom: 35px; padding: 0 100px 20px 100px; 
@@ -380,3 +381,15 @@ removed margin-bottom for flexbox*/
   display: flex;
 }
 
+/*Media queries for desktop screens and smaller*/
+
+@media screen and (max-width:980px) {
+}
+
+/*Media queries for tablets and smaller*/
+@media screen and (max-width:768px) {
+}
+
+/*Media queries for phones and smaller*/
+@media screen and (max-width:575px) {
+}
