stylistic css for inputs, borders, hover and focus

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position:-webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
@@ -60,6 +67,13 @@ header nav ul li a{
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   /*changed font-size:20px; 
   to 1.55vw or "viewport width" for flexbox*/
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* End of Header */
@@ -111,6 +125,8 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 /* hero call to action*/
@@ -164,6 +180,12 @@ h3 {
   width: 100%;
   margin-bottom: 15px;
   border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -177,6 +199,10 @@ h3 {
   padding: 10px 20px;
   font-size: 16px;
   border-radius: 10px;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
 }
 /* End of Style Form and Input Fields*/
 
@@ -208,11 +234,15 @@ steps p -> step-text p change font-size */
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #39a6b2;
+}
+
+.step:last-child {
+  border-bottom: none;
 }
 
 .step h3 {
@@ -373,6 +403,12 @@ removed margin-bottom for flexbox*/
   margin-bottom: 15px;
   margin-top: 5px;
   border-radius: 10px;
+  background-color: rgba(255,255,255, 0.5);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .contact-form button {
@@ -386,6 +422,11 @@ removed margin-bottom for flexbox*/
   border-radius: 10px;
 }
 
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
+
 .flex-row {
   display: flex;
 }
@@ -396,6 +437,7 @@ removed margin-bottom for flexbox*/
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
