--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 * {
   /* The "*" symbol affects ALL HTML elements*/
   margin: 0;
@@ -10,13 +16,13 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   /* hexidecimal number for light-blue/teal*/
-  color: #39a6b2;
+  color: var(--tertiary-color);
 }
 /* apply styles to the header*/
 
 header {
   padding: 20px 35px;
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
   /*after removal of display:inline; in header h1 and float:right; 
   in header nav, display:flex; creates mobile responsiveness*/
   display: flex;
@@ -29,12 +35,13 @@ header {
   background-size: cover;
   background-attachment: fixed;
   background-position: 80%;
+  z-index: 9999;
 }
 
 header h1 {
   font-weight: bold;
   font-size: 36px;
-  color: #fce138;
+  color: var(--primary-color);
   margin: 0;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   /*The inline display creates inline element properties for a block element*/
@@ -43,7 +50,7 @@ header h1 {
 
 header a {
   text-decoration: none;
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 header nav {
@@ -70,8 +77,8 @@ header nav ul li a{
 }
 
 header nav ul li a:hover {
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
 }
@@ -81,7 +88,7 @@ header nav ul li a:hover {
 /* Footer */
 
 footer {
-  background: #fce138;
+  background: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
   /*flexbox*/
@@ -93,7 +100,7 @@ footer {
 footer h2 {
   /* removed display: inline; for flexbox */
 
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 30px;
   margin: 0;
 }
@@ -105,7 +112,7 @@ footer div {
 }
 
 footer a {
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 /* End of Footer*/
@@ -143,16 +150,16 @@ section {
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color: var(--primary-color);
 }
 /*Hero Style Ends*/
 
 /* Style Form and Input Fields*/
 .hero-form {
-  color: #024e76;
+  color: var(--secondary-color);
   background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
-  border: solid 3px #024e76;
+  border: solid 3px var(--secondary-color);
  /* width: 600px; position: absolute; 
  bottom: 80px; right: 80px; 
  removed for flexbox*/
@@ -172,11 +179,11 @@ h3 {
 }
 
 .form-input {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   border-radius: 10px;
@@ -193,8 +200,8 @@ h3 {
 }
 
 .hero-form button {
-  color: #fce138;
-  background-color: #024e76;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -202,7 +209,67 @@ h3 {
 }
 
 .hero-form button:hover {
-  background-color: #39a6b2;  
+  background-color: var(--tertiary-color);  
+}
+
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color);  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--secondary-color);
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
 }
 /* End of Style Form and Input Fields*/
 
@@ -212,7 +279,7 @@ h3 {
 
 .intro p {
   line-height: 1.7;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   width: 80%;
   font-size: 20 px;
   /* To center an block element 
@@ -227,7 +294,7 @@ Removed Steps img div and span  for flexbox &
 steps h3 -> step h3 removed margin-top
 steps p -> step-text p change font-size */
 .steps {
-  background: #fce138;
+  background: var(--primary-color)
 }
 
 .step {
@@ -238,7 +305,7 @@ steps p -> step-text p change font-size */
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid var(--tertiary-color);
 }
 
 .step:last-child {
@@ -246,7 +313,7 @@ steps p -> step-text p change font-size */
 }
 
 .step h3 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 46px;
   flex: 1 30%;
  }
@@ -265,11 +332,11 @@ steps p -> step-text p change font-size */
  .step-text h4 {
    font-size: 26px;
    line-height: 1.5;
-   color: #024e76;
+   color: var(--secondary-color);
  }
 
 .step-text p {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 
@@ -287,7 +354,7 @@ steps p -> step-text p change font-size */
 /* blending css for section titles and heading borders*/
 .section-title {
   font-size: 48px;
-  color: #024e76;
+  color: var(--secondary-color);
   border-bottom: 3px solid;
   /*  margin-bottom: 35px; padding: 0 100px 20px 100px; 
   display: inline-block; removed, flexbox*/
@@ -298,11 +365,11 @@ steps p -> step-text p change font-size */
 }
 
 .primary-border {
-  border-color: #fce138;
+  border-color: var(--primary-color);
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+  border-color: var(--tertiary-color);
 }
 /* End of section titles and heading borders*/
 
@@ -318,8 +385,8 @@ steps p -> step-text p change font-size */
 
 .trainer {
   margin: 20px;
-  background: #024e76;
-  color: #fce138;
+  background: var(--secondary-color);
+  color: var(--primary-color);
   flex: 1;
 }
 
@@ -361,11 +428,11 @@ removed margin-bottom for flexbox*/
 }
 
 .contact-section {
-  background: #024e76;
+  background: var(--secondary-color);
 }
 
 .contact-section h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-info iframe {
@@ -377,7 +444,7 @@ removed margin-bottom for flexbox*/
 }
 
 .contact-info h3 {
-  color: #fce138;
+  color: var(--primary-color);
   font-size: 32px;
 }
 
@@ -390,15 +457,15 @@ removed margin-bottom for flexbox*/
 }
 
 .contact-info a {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -414,8 +481,8 @@ removed margin-bottom for flexbox*/
 .contact-form button {
   width: 100%;
   border: none;
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
@@ -423,8 +490,8 @@ removed margin-bottom for flexbox*/
 }
 
 .contact-form button:hover {
-  color: #fce138;
-  background: #39a6b2;
+  color: var(--primary-color);
+  background: var(--tertiary-color);
 }
 
 .flex-row {
